k8s/qa/perf/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  generation: 1
  name: perf
  namespace: perf
spec:
  rules:
  - host: perf-dashboard.razorpay.in
    http:
      paths:
      - backend:
          serviceName: perf
          servicePort: 80
      path: /
